--- a/src/scss/commons/common.scss
+++ b/src/scss/commons/common.scss
@@ -5,37 +5,35 @@
 // 工具样式
 @import "tools";
 // 普通组件
-@import "../components-dom/g-wrap";
-@import "../components-dom/g-input";
-@import "../components-dom/g-select";
-@import "../components-dom/g-textarea";
-@import "../components-dom/g-radio";
-@import "../components-dom/g-checkbox";
-@import "../components-dom/g-validate-form-hint";
-@import "../components-dom/g-radio-switch";
-@import "../components-dom/g-upload";
-@import "../components-dom/g-button";
-@import "../components-dom/g-table";
-@import "../components-dom/g-list";
-@import "../components-dom/g-loading";
-@import "../components-dom/g-mask";
-@import "../components-dom/g-message";
-@import "../components-dom/g-dialog-confirm";
-@import "../components-dom/g-dialog-tooltip";
-@import "../components-dom/g-dialog-popover";
-@import "../components-dom/g-dialog-jump-link";
-@import "../components-dom/g-navigation";
-@import "../components-dom/g-pagination";
-@import "../components-dom/g-slide";
-@import "../components-dom/g-star";
-@import "../components-dom/g-go-top";
-@import "../components-dom/g-no-data";
-@import "../components-dom/g-copyright";
-@import "../components-dom/g-lazy-load";
-@import "../components-dom/g-footer-nav";
-@import "../components-dom/g-quick-enter";
-// 业务组件(存在数据交互)
-@import "../components-dom-business/g-gallery";
+@import "../components/g-wrap";
+@import "../components/g-input";
+@import "../components/g-select";
+@import "../components/g-textarea";
+@import "../components/g-radio";
+@import "../components/g-checkbox";
+@import "../components/g-validate-form-hint";
+@import "../components/g-radio-switch";
+@import "../components/g-upload";
+@import "../components/g-button";
+@import "../components/g-table";
+@import "../components/g-list";
+@import "../components/g-loading";
+@import "../components/g-mask";
+@import "../components/g-message";
+@import "../components/g-dialog-confirm";
+@import "../components/g-dialog-tooltip";
+@import "../components/g-dialog-popover";
+@import "../components/g-dialog-jump-link";
+@import "../components/g-navigation";
+@import "../components/g-pagination";
+@import "../components/g-slide";
+@import "../components/g-star";
+@import "../components/g-go-top";
+@import "../components/g-no-data";
+@import "../components/g-copyright";
+@import "../components/g-lazy-load";
+@import "../components/g-footer-nav";
+@import "../components/g-quick-enter";
 
 // 图片列表测试
 .g-img-test {
