--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -17,8 +17,8 @@
                 document.addEventListener('resize', resetFontSize);
             })();
         </script>
-    <link href="./static/static/this-is-global-file-common.4e5295b054d92b2713e7.css" rel="stylesheet"></head>
+    </head>
     <body>
-        demo
-    <script type="text/javascript" src="./static/static/this-is-global-file-common.0.chunk.6e9ec2986a6b46bbf243.js"></script><script type="text/javascript" src="./static/static/index.1.bundle.5578b34e38ea888ff264.js"></script></body>
+        ui
+    </body>
 </html>
