--- a/src/demo/scss/commons/common.scss
+++ b/src/demo/scss/commons/common.scss
@@ -6,8 +6,6 @@ body {
 
 /* g-ui样式 */
 
-/*
-@for $i from 1 through 300 {
-    .item-#{$i} { width: 2em * $i; }
-}
-*/
+//@for $i from 1 through 300 {
+//    .item-#{$i} { width: 2em * $i; }
+//}
