--- a/src/demo/scss/pages/ui.scss
+++ b/src/demo/scss/pages/ui.scss
@@ -1,4 +1,20 @@
-.ui {
+.ui1 {
+    width: 100px;
+    height: 100px;
+}
+.ui2 {
+    width: 100px;
+    height: 100px;
+}
+.ui3 {
+    width: 100px;
+    height: 100px;
+}
+.ui4 {
+    width: 100px;
+    height: 100px;
+}
+.ui5 {
     width: 100px;
     height: 100px;
 }
