--- a/src/demo/scss/pages/word.scss
+++ b/src/demo/scss/pages/word.scss
@@ -2,3 +2,19 @@
     width: 100px;
     height: 100px;
 }
+.word1 {
+    width: 100px;
+    height: 100px;
+}
+.word2 {
+    width: 100px;
+    height: 100px;
+}
+.word3 {
+    width: 100px;
+    height: 100px;
+}
+.word4 {
+    width: 100px;
+    height: 100px;
+}
