--- a/src/demo/scss/pages/ui.scss
+++ b/src/demo/scss/pages/ui.scss
@@ -1,3 +1,7 @@
+.ui {
+    width: 100px;
+    height: 100px;
+}
 .ui1 {
     width: 100px;
     height: 100px;
@@ -15,6 +19,10 @@
     height: 100px;
 }
 .ui5 {
+    width: 100px;
+    height: 100px;
+}
+.ui6 {
     width: 100px;
     height: 100px;
 }
