--- a/src/demo/scss/pages/word.scss
+++ b/src/demo/scss/pages/word.scss
@@ -18,3 +18,11 @@
     width: 100px;
     height: 100px;
 }
+.word5 {
+    width: 100px;
+    height: 100px;
+}
+.word6 {
+    width: 100px;
+    height: 100px;
+}
