--- a/src/demo/scss/commons/common.scss
+++ b/src/demo/scss/commons/common.scss
@@ -5,6 +5,7 @@ body {
 }
 
 /* g-ui样式 */
+@import "../../../ui/scss/commons/common";
 
 //@for $i from 1 through 300 {
 //    .item-#{$i} { width: 2em * $i; }
