--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -19,6 +19,29 @@
         </script>
     </head>
     <body>
-        ui
+        <div class="g-title">布局组件 - 排序切换</div>
+        <div class="g-sort-tab">
+            <div class="g-sort-tab-item">
+                <div class="g-sort-tab-item-text">价格</div>
+                <div class="g-sort-tab-item-icon">
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-up_solid"></div>
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-down_solid"></div>
+                </div>
+            </div>
+            <div class="g-sort-tab-item">
+                <div class="g-sort-tab-item-text">价格</div>
+                <div class="g-sort-tab-item-icon">
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-up_solid"></div>
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-down_solid"></div>
+                </div>
+            </div>
+            <div class="g-sort-tab-item">
+                <div class="g-sort-tab-item-text">价格</div>
+                <div class="g-sort-tab-item-icon">
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-up_solid"></div>
+                    <div class="g-sort-tab-item-icon-item iconfont icon-g-down_solid"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
