--- a/src/ui/scss/commons/_iconfont.scss
+++ b/src/ui/scss/commons/_iconfont.scss
@@ -1,5 +1,5 @@
 /* 字体图标 */
-@import "../fonts/iconfont.css";
+@import "../../../ui/scss/fonts/iconfont.css";
 
 .iconfont {
     font-size: inherit;
