--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -19,9 +19,7 @@
         </script>
     </head>
     <body>
-        <div class="g-title">
-            <div class="g-title-text">布局组件 - 排序切换</div>
-        </div>
+        <div class="g-title">布局组件 - 排序切换</div>
         <div class="g-sort-tab">
             <div class="g-sort-tab-item g-sort-tab-item_up">
                 <div class="g-sort-tab-item-text">价格</div>
