--- a/src/ui/scss/commons/common.scss
+++ b/src/ui/scss/commons/common.scss
@@ -1,7 +1,3 @@
-// 字体图标
-//@import "iconfont";
-// 工具样式
-@import "tools";
 // 普通组件
 @import "../components/g-wrap";
 @import "../components/g-input";
@@ -255,29 +251,13 @@
 }
 
 // 标题
-/*
-.g-title {
-    height: px2rem(40);
-    display: flex;
-    font-size: px2rem($g-font-size-default);
-    color: #000;
-    background: #ffffff;
-    .g-title-text {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-bottom: 1px solid $g-danger-color;
-        padding: 0 px2rem(10);
-    }
-}
-*/
 .g-title {
     height: px2rem(18);
     font-size: px2rem($g-font-size-default);
     color: #000;
     display: flex;
     align-items: center;
-    padding: px2rem(10) 0 px2rem(5);
+    padding: px2rem(10) px2rem(10) px2rem(5);
     &:before, &:after {
         content: '';
         display: block;
@@ -289,18 +269,18 @@
     }
     &:before {
         margin-right: px2rem(10);
-        transform: rotate(-15deg);
+        transform: rotate(-90deg);
     }
     &:after {
         margin-left: px2rem(10);
-        transform: rotate(15deg);
+        transform: rotate(90deg);
     }
     &:hover {
         &:before {
-            transform: rotate(-15-360deg);
+            transform: rotate(-90-360deg);
         }
         &:after {
-            transform: rotate(15+360deg);
+            transform: rotate(90+360deg);
         }
     }
 }
