--- a/src/ui/scss/commons/common.scss
+++ b/src/ui/scss/commons/common.scss
@@ -140,6 +140,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        width: px2rem(12);
     }
     .g-sort-tab-item-icon-item {
         display: flex;
