--- a/src/ui/scss/commons/common.scss
+++ b/src/ui/scss/commons/common.scss
@@ -13,11 +13,11 @@
 @import "../components/g-upload";
 @import "../components/g-button";
 @import "../components/g-table";
-@import "../components/g-list";
+@import "../components/g-list-wrap";
 @import "../components/g-loading";
 @import "../components/g-mask";
 @import "../components/g-message";
-@import "../components/g-dialog-confirm";
+@import "../components/g-dialog-confirm-wrap";
 @import "../components/g-dialog-tooltip";
 @import "../components/g-dialog-popover";
 @import "../components/g-dialog-jump-link";
@@ -32,121 +32,9 @@
 @import "../components/g-footer-nav";
 @import "../components/g-quick-enter";
 @import "../components/g-audio";
-@import "../components/g-form";
-
-// 验证码
-.g-verify-code-canvas {
-    width: px2rem(160);
-    height: px2rem(40);
-    img {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-// 登录,注册,改密的跳转引导
-.g-jump-guide {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: px2rem(30);
-    padding: 0 px2rem(10);
-    font-size: px2rem($g-font-size-default);
-    .g-jump-guide-item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .g-jump-guide-item-text {
-        }
-        .g-jump-guide-item-icon {
-        }
-    }
-}
-
-// 行和列
-.g-row {
-    display: flex;
-    flex-wrap: wrap;
-    .g-col {
-        flex: 1;
-        width: 0;
-        margin-right: px2rem(20);
-        &:last-of-type {
-            margin-right: 0;
-        }
-    }
-}
-
-// 标题
-.g-title {
-    height: px2rem(40);
-    font-size: px2rem($g-font-size-default);
-    color: #000;
-    display: flex;
-    align-items: center;
-    &:before, &:after {
-        content: '';
-        display: block;
-        width: px2rem(10);
-        height: 1px;
-        background: $g-ignore-color;
-        border-radius: px2rem(20);
-        transition: 0.4s;
-        margin: 0 px2rem(10);
-    }
-    &:hover {
-        &:before {
-            transform: rotate(-360deg);
-        }
-        &:after {
-            transform: rotate(360deg);
-        }
-    }
-}
-
-// 排序切换
-.g-sort-tab {
-    display: flex;
-    height: px2rem(40);
-    background: #ffffff;
-    line-height: 1;
-    .g-sort-tab-item {
-        width: 0;
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        &.g-sort-tab-item_up { // 升序
-            .g-sort-tab-item-icon-item {
-                &:first-of-type {
-                    color: $g-danger-color;
-                }
-            }
-        }
-        &.g-sort-tab-item_down { // 降序
-            .g-sort-tab-item-icon-item {
-                &:last-of-type {
-                    color: $g-danger-color;
-                }
-            }
-        }
-    }
-    .g-sort-tab-item-text {
-        font-size: px2rem(12);
-    }
-    .g-sort-tab-item-icon {
-        color: #999999;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        width: px2rem(12);
-    }
-    .g-sort-tab-item-icon-item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: px2rem(12);
-        height: px2rem(8);
-    }
-}
+@import "../components/g-form-wrap";
+@import "../components/g-verify-code-canvas";
+@import "../components/g-jump-guide";
+@import "../components/g-row";
+@import "../components/g-title";
+@import "../components/g-sort-tab";
