--- a/src/ui/scss/config/_var.scss
+++ b/src/ui/scss/config/_var.scss
@@ -8,6 +8,7 @@ $g-background-color-block: #ffffff; // 内容区块的背景色调(自定义)
 $g-font-size-default: 12; // 默认字体大小12px(自定义)
 $g-font-color-default: #333333; // 默认(自定义)
 $g-font-color-disabled: #c1c1c1; // 禁用(自定义)
+$g-font-color-auxiliary: #aaaaaa; // 辅助色(自定义)
 
 // 边框
 $g-border-color-default: #e1e1e1; // 默认(自定义)
