--- a/src/ui/scss/commons/g-common.scss
+++ b/src/ui/scss/commons/g-common.scss
@@ -1,7 +1,7 @@
 // 清零样式
-@import "../reset/reset";
+@import "../reset/g-reset";
 // 工具样式
-@import "../tools/tools";
+@import "../tools/g-tools";
 // 组件样式
 @import "../components/g-input";
 @import "../components/g-select";
