--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -43,5 +43,7 @@
                 </div>
             </div>
         </div>
+        <div class="g-title">布局组件 - 进度条</div>
+        <div class="g-progress-bar">待续...</div>
     </body>
 </html>
