--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -19,7 +19,7 @@
         </script>
     </head>
     <body>
-        <div class="g-title">布局组件 - 排序切换</div>
+        <div class="g-title">功能组件 - 排序切换</div>
         <div class="g-sort-tab">
             <div class="g-sort-tab-item">
                 <div class="g-sort-tab-item-text">比例</div>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="g-title">布局组件 - 进度条</div>
-        <div class="g-progress-bar">待续...</div>
+        <div class="g-title">功能组件 - 进度条</div>
+        <div class="g-progress-bar">100%</div>
     </body>
 </html>
