--- a/src/ui/scss/commons/g-common.scss
+++ b/src/ui/scss/commons/g-common.scss
@@ -38,3 +38,4 @@
 @import "../components/g-row";
 @import "../components/g-title";
 @import "../components/g-sort-tab";
+@import "../components/g-progress-bar";
