--- a/src/ui/scss/components/g-sort-tab.scss
+++ b/src/ui/scss/components/g-sort-tab.scss
@@ -11,7 +11,7 @@
         align-items: center;
         justify-content: center;
         color: $g-font-color-auxiliary;
-        &.g-sort-tab-item_selected {
+        &.g-sort-tab-item_active {
             color: $g-font-color-default;
         }
     }
@@ -30,13 +30,13 @@
         margin: px2rem(1) 0;
         &:first-of-type {
             border-bottom-color: $g-font-color-auxiliary;
-            &.g-sort-tab-item-icon-item_selected {
+            &.g-sort-tab-item-icon-item_active {
                 border-bottom-color: $g-danger-color;
             }
         }
         &:last-of-type {
             border-top-color: $g-font-color-auxiliary;
-            &.g-sort-tab-item-icon-item_selected {
+            &.g-sort-tab-item-icon-item_active {
                 border-bottom-color: $g-danger-color;
             }
         }
