--- a/src/demo/views/pages/ui.html
+++ b/src/demo/views/pages/ui.html
@@ -20,30 +20,8 @@
     </head>
     <body>
         <div class="g-title">功能组件 - 排序切换</div>
-        <div class="g-sort-tab">
-            <div class="g-sort-tab-item">
-                <div class="g-sort-tab-item-text">比例</div>
-                <div class="g-sort-tab-item-icon">
-                    <div class="g-sort-tab-item-icon-item"></div>
-                    <div class="g-sort-tab-item-icon-item"></div>
-                </div>
-            </div>
-            <div class="g-sort-tab-item">
-                <div class="g-sort-tab-item-text">收益</div>
-                <div class="g-sort-tab-item-icon">
-                    <div class="g-sort-tab-item-icon-item"></div>
-                    <div class="g-sort-tab-item-icon-item"></div>
-                </div>
-            </div>
-            <div class="g-sort-tab-item">
-                <div class="g-sort-tab-item-text">价格</div>
-                <div class="g-sort-tab-item-icon">
-                    <div class="g-sort-tab-item-icon-item"></div>
-                    <div class="g-sort-tab-item-icon-item"></div>
-                </div>
-            </div>
-        </div>
+        <div class="sort-tab"></div>
         <div class="g-title">功能组件 - 进度条</div>
-        <div class="g-progress-bar">100%</div>
+        <div class="progress-bar"></div>
     </body>
 </html>
