--- a/src/ui/scss/components/g-progress-bar.scss
+++ b/src/ui/scss/components/g-progress-bar.scss
@@ -6,6 +6,8 @@
     height: px2rem(60);
     position: relative;
     overflow: hidden;
+    background: #ffffff;
+    border-radius: 50%;
     .g-progress-bar-text {
         position: absolute;
         width: 100%;
