--- a/src/ui/scss/components/g-progress-bar.scss
+++ b/src/ui/scss/components/g-progress-bar.scss
@@ -8,12 +8,23 @@
     overflow: hidden;
     background: #ffffff;
     border-radius: 50%;
+    //border: px2rem(5) solid transparent;
+    //box-sizing: border-box;
+    .g-progress-bar-canvas {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+    }
     .g-progress-bar-text {
         position: absolute;
         width: 100%;
         height: 100%;
         left: 0;
         top: 0;
+        z-index: 2;
         @extend .g-xy-center_flex;
     }
 }
