--- a/src/ui/scss/commons/g-common.scss
+++ b/src/ui/scss/commons/g-common.scss
@@ -8,7 +8,7 @@
 @import "../components/g-textarea";
 @import "../components/g-radio";
 @import "../components/g-checkbox";
-@import "../components/g-validate-form-hint";
+@import "../components/g-validate";
 @import "../components/g-radio-switch";
 @import "../components/g-upload";
 @import "../components/g-button";
@@ -17,10 +17,10 @@
 @import "../components/g-loading";
 @import "../components/g-mask";
 @import "../components/g-message";
-@import "../components/g-dialog-confirm-wrap";
-@import "../components/g-dialog-tooltip";
-@import "../components/g-dialog-popover";
-@import "../components/g-dialog-jump-link";
+@import "../components/g-confirm-wrap";
+@import "../components/g-tooltip";
+@import "../components/g-popover";
+@import "../components/g-jump-link";
 @import "../components/g-navigation";
 @import "../components/g-pagination";
 @import "../components/g-slide";
