--- a/src/ui/scss/components/g-popover.scss
+++ b/src/ui/scss/components/g-popover.scss
@@ -1,4 +1,4 @@
-.g-dialog-popover {
+.g-popover {
     $triangleW: 8;
     $bg: rgba(255, 255, 255, 1);
     position: absolute;
@@ -6,30 +6,30 @@
     display: flex;
     font-size: px2rem($g-font-size-default);
     /* 水平居上 */
-    &.g-dialog-popover_top-left {
+    &.g-popover_top-left {
         flex-direction: column;
         align-items: flex-start;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(45deg);
             margin-bottom: px2rem(6);
             margin-top: px2rem(-$triangleW/2);
             margin-left: px2rem(10);
         }
     }
-    &.g-dialog-popover_top-center {
+    &.g-popover_top-center {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(45deg);
             margin-bottom: px2rem(6);
             margin-top: px2rem(-$triangleW/2);
         }
     }
-    &.g-dialog-popover_top-right {
+    &.g-popover_top-right {
         flex-direction: column;
         align-items: flex-end;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(45deg);
             margin-bottom: px2rem(6);
             margin-top: px2rem(-$triangleW/2);
@@ -37,30 +37,30 @@
         }
     }
     /* 水平居下 */
-    &.g-dialog-popover_bottom-left {
+    &.g-popover_bottom-left {
         flex-direction: column-reverse;
         align-items: flex-start;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-135deg);
             margin-top: px2rem(6);
             margin-bottom: px2rem(-$triangleW/2);
             margin-left: px2rem(10);
         }
     }
-    &.g-dialog-popover_bottom-center {
+    &.g-popover_bottom-center {
         flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-135deg);
             margin-top: px2rem(6);
             margin-bottom: px2rem(-$triangleW/2);
         }
     }
-    &.g-dialog-popover_bottom-right {
+    &.g-popover_bottom-right {
         flex-direction: column-reverse;
         align-items: flex-end;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-135deg);
             margin-top: px2rem(6);
             margin-bottom: px2rem(-$triangleW/2);
@@ -68,27 +68,27 @@
         }
     }
     /* 垂直居左 */
-    &.g-dialog-popover_left-top {
+    &.g-popover_left-top {
         align-items: flex-start;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-45deg);
             margin-right: px2rem(6);
             margin-left: px2rem(-$triangleW/2);
             margin-top: px2rem(10);
         }
     }
-    &.g-dialog-popover_left-center {
+    &.g-popover_left-center {
         align-items: center;
         justify-content: center;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-45deg);
             margin-right: px2rem(6);
             margin-left: px2rem(-$triangleW/2);
         }
     }
-    &.g-dialog-popover_left-bottom {
+    &.g-popover_left-bottom {
         align-items: flex-end;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-45deg);
             margin-right: px2rem(6);
             margin-left: px2rem(-$triangleW/2);
@@ -96,30 +96,30 @@
         }
     }
     /* 垂直居右 */
-    &.g-dialog-popover_right-top {
+    &.g-popover_right-top {
         flex-direction: row-reverse;
         align-items: flex-start;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-225deg);
             margin-left: px2rem(6);
             margin-right: px2rem(-$triangleW/2);
             margin-top: px2rem(10);
         }
     }
-    &.g-dialog-popover_right-center {
+    &.g-popover_right-center {
         flex-direction: row-reverse;
         align-items: center;
         justify-content: center;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-225deg);
             margin-left: px2rem(6);
             margin-right: px2rem(-$triangleW/2);
         }
     }
-    &.g-dialog-popover_right-bottom {
+    &.g-popover_right-bottom {
         flex-direction: row-reverse;
         align-items: flex-end;
-        .g-dialog-popover-icon {
+        .g-popover-icon {
             transform: rotate(-225deg);
             margin-left: px2rem(6);
             margin-right: px2rem(-$triangleW/2);
@@ -127,7 +127,7 @@
         }
     }
     /* 主体 */
-    .g-dialog-popover-content {
+    .g-popover-content {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -138,7 +138,7 @@
         color: rgba(0, 0, 0, 1);
         border: 1px solid $g-border-color-default;
     }
-    .g-dialog-popover-icon {
+    .g-popover-icon {
         width: px2rem($triangleW);
         height: px2rem($triangleW);
         border: 1px solid $g-border-color-default;
