--- a/src/ui/scss/components/g-tooltip.scss
+++ b/src/ui/scss/components/g-tooltip.scss
@@ -1,4 +1,4 @@
-.g-dialog-tooltip {
+.g-tooltip {
     $h: 24;
     $triangleW: 6;
     $bg: rgba(0, 0, 0, 1);
@@ -6,26 +6,26 @@
     z-index: 9;
     display: flex;
     font-size: px2rem($g-font-size-default);
-    &.g-dialog-tooltip_top-left {
+    &.g-tooltip_top-left {
         flex-direction: column;
         align-items: flex-start;
-        .g-dialog-tooltip-icon {
+        .g-tooltip-icon {
             margin-left: px2rem(10);
         }
     }
-    &.g-dialog-tooltip_top-center {
+    &.g-tooltip_top-center {
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-    &.g-dialog-tooltip_top-right {
+    &.g-tooltip_top-right {
         flex-direction: column;
         align-items: flex-end;
-        .g-dialog-tooltip-icon {
+        .g-tooltip-icon {
             margin-right: px2rem(10);
         }
     }
-    .g-dialog-tooltip-content {
+    .g-tooltip-content {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -36,7 +36,7 @@
         background: $bg;
         color: rgba(255, 255, 255, 1);
     }
-    .g-dialog-tooltip-icon {
+    .g-tooltip-icon {
         width: 0;
         height: 0;
         border: px2rem($triangleW) solid transparent;
