--- a/src/ui/scss/components/g-validate.scss
+++ b/src/ui/scss/components/g-validate.scss
@@ -1,5 +1,5 @@
 // 表单验证失败的提示
-.g-validate-form-hint {
+.g-validate {
     $height: 16;
     $triangleW: 4;
     $bgc: rgba(250, 85, 85, 0.8);
@@ -10,7 +10,7 @@
     position: absolute;
     right: px2rem(6);
     top: px2rem(- $height - $triangleW - 2);
-    .g-validate-form-hint-text {
+    .g-validate-text {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -23,7 +23,7 @@
         background-color: $bgc;
         border-radius: px2rem(100);
     }
-    .g-validate-form-hint-icon {
+    .g-validate-icon {
         width: 0;
         height: 0;
         margin-right: px2rem(10);
