--- a/src/ui/scss/commons/g-common.scss
+++ b/src/ui/scss/commons/g-common.scss
@@ -2,6 +2,8 @@
 @import "../reset/g-reset";
 // 工具样式
 @import "../tools/g-tools";
+// 字体图标
+@import "../fonts/g-iconfont";
 // 组件样式
 @import "../components/g-input";
 @import "../components/g-select";
