--- a/src/ui/scss/config/g-config.scss
+++ b/src/ui/scss/config/g-config.scss
@@ -1,3 +1,104 @@
-@import "g-var";
-@import "g-function";
-@import "g-mixin";
+/*----------------------function--------------------*/
+/*
+// px转rem(phone) 这个是给手机端用的。
+@function px2rem($px, $psd:320) {
+    @return $px / $psd * 10rem;
+}
+
+// px转px(phone) 这个是给手机端用的。当需要使用到px时，使用这个即可。pc端为什么不使用px2px而是重写了px2rem？原因是这样做pc组件和phone组件互转时比较方便。
+@function px2px($px) {
+    @return $px * 1px;
+}
+*/
+
+// px转rem(pc) 这个是给电脑端用的。
+@function px2rem($px) {
+    @if $px == 0 {
+        @return 0;
+    } @else {
+        @return $px * 1px;
+    }
+}
+
+/*----------------------var--------------------*/
+// 背景
+$g-background-color-floor: #f4f4f4; // 底色(自定义)
+$g-background-color-default: #bbbbbb; // 默认(自定义)
+$g-background-color-disabled: #e6e6e6; // 禁用(自定义)
+$g-background-color-block: #ffffff; // 内容区块的背景色调(自定义)
+
+// 字体
+$g-font-size-default: 12; // 默认字体大小12px(自定义)
+$g-font-color-default: #333333; // 默认(自定义)
+$g-font-color-disabled: #c1c1c1; // 禁用(自定义)
+$g-font-color-auxiliary: #aaaaaa; // 辅助色(自定义)
+
+// 边框
+$g-border-color-default: #e1e1e1; // 默认(自定义)
+$g-border-color-disabled: #e3e3e3; // 禁用(自定义)
+
+// 语义
+$g-brand-color: #0089ff; // 品牌色(自定义)
+$g-highlight-color: #0089ff; // 高亮(自定义)，有待思考这个颜色是不是应该就是品牌色待续...
+$g-success-color: #67C23A; // 成功(嫩绿)
+$g-warning-color: #eb9e05; // 警告(鲜橙)
+$g-danger-color: #fa5555; // 危险(艳红)
+$g-ignore-color: #bfbfbf; // 忽视(浅灰)
+$g-mask-color: rgba(0, 0, 0, 0.6); // 遮罩(黑色)
+$g-select-color: #409eff; // 自定义单选按钮和自定义多选按钮等被选中的色调(蓝色)
+$g-create-color: #06bf04; // 新建(创建)的颜色
+$g-cancel-color: #888d99; // 取消的颜色，有待思考命名是否合理待续...
+$g-dark-color: #252834; // 菜单的颜色，有待思考命名是否合理待续...
+
+/*----------------------mixin--------------------*/
+// 清除浮动
+@mixin g-clearfix() {
+    &:after {
+        content: '';
+        clear: both;
+        display: block;
+        height: 0;
+        overflow: hidden;
+    }
+}
+
+// 垂直水平居中(伪类)
+@mixin g-xy-center_sham() {
+    font-size: 0;
+    text-align: center;
+    & > :nth-child(n) {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    &:before {
+        content: '';
+        height: 100%;
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
+
+// 垂直水平居中(flex)
+@mixin g-xy-center_flex() {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    word-break: break-all;
+}
+
+// 省略号
+@mixin g-text-ellipsis($lineClamp:1, $lineHeight:1, $height:0) {
+    line-height: $lineHeight;
+    @if $height == 0 {
+        height: $lineHeight * $lineClamp;
+    } @else {
+        height: $height;
+    }
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: $lineClamp;
+}
