--- a/src/ui/scss/components/g-list-wrap.scss
+++ b/src/ui/scss/components/g-list-wrap.scss
@@ -16,6 +16,7 @@
         }
     }
     .g-list {
+        @extend .g-reset_a;
         display: block;
         padding: px2rem(10) px2rem(10);
         margin-bottom: px2rem(10);
