--- a/src/ui/scss/fonts/g-iconfont.scss
+++ b/src/ui/scss/fonts/g-iconfont.scss
@@ -7,7 +7,7 @@
     url('//at.alicdn.com/t/font_814235_sk303tsdgx.svg#iconfont') format('svg');
 }
 
-.iconfont {
+.g-iconfont {
     font-family: "iconfont" !important;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
@@ -16,66 +16,66 @@
     line-height: 1;
 }
 
-.icon-g-loading:before {
+.g-icon-loading:before {
     content: "\e64a";
 }
 
-.icon-g-upload-img:before {
+.g-icon-upload-img:before {
     content: "\e64b";
 }
 
-.icon-g-select:before {
+.g-icon-select:before {
     content: "\e651";
 }
 
-.icon-g-checkbox:before {
+.g-icon-checkbox:before {
     content: "\e652";
 }
 
-.icon-g-radio:before {
+.g-icon-radio:before {
     content: "\e653";
 }
 
-.icon-g-no-data:before {
+.g-icon-no-data:before {
     content: "\e666";
 }
 
-.icon-g-prev:before {
+.g-icon-prev:before {
     content: "\e66d";
 }
 
-.icon-g-next:before {
+.g-icon-next:before {
     content: "\e66e";
 }
 
-.icon-g-required:before {
+.g-icon-required:before {
     content: "\e67a";
 }
 
-.icon-g-close:before {
+.g-icon-close:before {
     content: "\e682";
 }
 
-.icon-g-up:before {
+.g-icon-up:before {
     content: "\e689";
 }
 
-.icon-g-right:before {
+.g-icon-right:before {
     content: "\e68a";
 }
 
-.icon-g-down:before {
+.g-icon-down:before {
     content: "\e68b";
 }
 
-.icon-g-left:before {
+.g-icon-left:before {
     content: "\e68c";
 }
 
-.icon-g-star:before {
+.g-icon-star:before {
     content: "\e693";
 }
 
-.icon-g-star_solid:before {
+.g-icon-star_solid:before {
     content: "\e694";
 }
