--- a/src/ui/scss/components/g-form-wrap.scss
+++ b/src/ui/scss/components/g-form-wrap.scss
@@ -139,6 +139,7 @@
                 text-align: justify;
                 display: flex;
                 align-items: center;
+                flex-wrap: wrap;
             }
         }
     }
